fixing flow connecting market data

--- a/oe_wombat_client/view/data_type.xml
+++ b/oe_wombat_client/view/data_type.xml
@@ -31,6 +31,7 @@
 									<field name="line_type" />
 									<field name="value" />
 									<field name="line_cardinality" />
+									<field name="primary" />
 								</tree>
 							</field>
 						</page>
