--- a/oe_wombat_client/view/client.xml
+++ b/oe_wombat_client/view/client.xml
@@ -2,7 +2,7 @@
 <openerp>
   <data>
 
-	<menuitem id="wombat" sequence="1" parent="base.menu_custom" name="Wombat" />
+	<menuitem id="integration" sequence="5" parent="base.menu_administration" name="Integration" />
 	
 	<!-- Group -->
 	
@@ -11,7 +11,8 @@
         <field name="model">wombat.client</field>
         <field name="arch" type="xml">
             <tree string="Clients" >
-            	<field name="url"/>
+            	<field name="name"/>
+				<field name="url"/>
                 <field name="store"/>
 				<field name="token"/>
 				<button name="push" type="object" string="Push" icon="gtk-go-forward"/>
@@ -26,9 +27,14 @@
             <form string="Client" version="7.0">
             	<sheet>
 					<group>
-						<field name="url"/>
-						<field name="store"/>
-						<field name="token"/>
+						<group>
+							<field name="name"/>
+							<field name="url"/>
+						</group>
+						<group>
+							<field name="store"/>
+							<field name="token"/>
+						</group>
 					</group>
 					<notebook>
 						<page string="Objects">
@@ -36,6 +42,8 @@
 								<tree string="Push objects" editable="bottom">
 									<field name="root" />
 									<field name="model_id" />
+									<field name="push_type" />
+									<field name="push_method" />
 								</tree>
 							</field>
 						</page>
@@ -53,7 +61,7 @@
         <field name="view_id" ref="wombat_client_view_tree"/>
     </record>
 	
-	<menuitem id="wombat_client_menu" sequence="1" parent="wombat" action="wombat_client_action"/>
+	<menuitem id="wombat_client_menu" sequence="1" parent="integration" action="wombat_client_action"/>
 
   </data>
 </openerp>
