--- a/oe_cenit_client/view/client.xml
+++ b/oe_cenit_client/view/client.xml
@@ -6,9 +6,9 @@
 	
 	<!-- Group -->
 	
-	<record id="wombat_client_view_tree" model="ir.ui.view">
-        <field name="name">wombat.client.view.tree</field>
-        <field name="model">wombat.client</field>
+	<record id="cenit_client_view_tree" model="ir.ui.view">
+        <field name="name">cenit.client.view.tree</field>
+        <field name="model">cenit.client</field>
         <field name="arch" type="xml">
             <tree string="Clients" >
             	<field name="name"/>
@@ -20,9 +20,9 @@
         </field>
     </record>
 	
-	<record id="wombat_client_view_form" model="ir.ui.view">
-        <field name="name">wombat.client.view.form</field>
-        <field name="model">wombat.client</field>
+	<record id="cenit_client_view_form" model="ir.ui.view">
+        <field name="name">cenit.client.view.form</field>
+        <field name="model">cenit.client</field>
         <field name="arch" type="xml">
             <form string="Client" version="7.0">
             	<sheet>
@@ -54,15 +54,15 @@
         </field>
     </record>
     
-    <record id="wombat_client_action" model="ir.actions.act_window">
+    <record id="cenit_client_action" model="ir.actions.act_window">
         <field name="name">Clients</field>
-        <field name="res_model">wombat.client</field>
+        <field name="res_model">cenit.client</field>
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
-        <field name="view_id" ref="wombat_client_view_tree"/>
+        <field name="view_id" ref="cenit_client_view_tree"/>
     </record>
 	
-	<menuitem id="wombat_client_menu" sequence="1" parent="integration" action="wombat_client_action"/>
+	<menuitem id="cenit_client_menu" sequence="1" parent="integration" action="cenit_client_action"/>
 
   </data>
 </openerp>
