--- a/oe_cenit_client/view/client.xml
+++ b/oe_cenit_client/view/client.xml
@@ -1,77 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
-  <data>
-
-	<menuitem id="integration" sequence="5" parent="base.menu_administration" name="Integration" />
-	
-	<!-- Group -->
-	
-	<record id="cenit_client_view_tree" model="ir.ui.view">
-        <field name="name">cenit.client.view.tree</field>
-        <field name="model">cenit.client</field>
-        <field name="arch" type="xml">
-            <tree string="Clients" >
-            	<field name="name"/>
-				<field name="url"/>
-                <field name="key"/>
-				<field name="token"/>
-				<button name="push" type="object" string="Push" icon="gtk-go-forward"/>
-            </tree>
-        </field>
-    </record>
-	
-	<record id="cenit_client_view_form" model="ir.ui.view">
-        <field name="name">cenit.client.view.form</field>
-        <field name="model">cenit.client</field>
-        <field name="arch" type="xml">
-            <form string="Client" version="7.0">
-            	<sheet>
-					<group>
-						<group>
-							<field name="name"/>
-							<field name="url"/>
+    <data>
+    	
+		<menuitem id="cenit" sequence="5" parent="base.menu_administration" name="Cenit" />
+		
+		<record id="view_cenit_client_tree" model="ir.ui.view" >
+			<field name="name">view.cenit.client.form</field>
+			<field name="model">cenit.client</field>
+            <field name="arch" type="xml">
+            	<tree string="Clients" >
+            		<field name="name" />
+					<field name="key" />
+					<field name="token" />
+					<button name="set_connection_in_cenit" type="object" string="Set Connection" icon="terp-stock_effects-object-colorize" />
+				</tree>
+			</field>
+		</record>
+         
+        <record id="view_cenit_configuration" model="ir.ui.view">
+            <field name="name">view.cenit.client.form</field>
+            <field name="model">cenit.client</field>
+            <field name="arch" type="xml">
+                <form string="Configure Cenit" class="oe_form_configuration">
+                    <div>
+                    	<group string="Cenit Parameters">
+							<label for="url"/>
+                            <div name="url">
+                                <div class="oe_inline">
+                                    <field name="url" placeholder="http://www.cenithub.com"/>
+                                </div>
+                            </div>
+                            <label for="key"/>
+                            <div name="key">
+                                <div class="oe_inline">
+                                    <field name="key" />
+                                </div>
+                            </div>
+                            <label for="token"/>
+                            <div name="token">
+                                <div class="oe_inline">
+                                    <field name="token" />
+                                </div>
+                            </div>
 						</group>
-						<group>
-							<field name="key"/>
-							<field name="token"/>
-						</group>
-					</group>
-					<notebook>
-						<page string="Push Objects">
-							<field name="push_object_ids" nolabel="1" >
-								<tree string="Push objects" editable="bottom">
-									<field name="root" />
-									<field name="model_id" />
-									<field name="push_type" />
-									<field name="push_method" />
-									<button name="push_all" type="object" string="Push" icon="gtk-go-forward"/>
-								</tree>
-							</field>
-						</page>
-						<page string="Pull Objects">
-							<field name="pull_object_ids" nolabel="1" >
-								<tree string="Pull objects" editable="bottom">
-									<field name="root" />
-									<field name="model_id" />
-									<button name="create_configuration_in_cenit" type="object" string="Create in Cenit" icon="terp-stock_effects-object-colorize"/>
-								</tree>
-							</field>
-						</page>
-					</notebook>
-				</sheet>
-            </form>
-        </field>
-    </record>
-    
-    <record id="cenit_client_action" model="ir.actions.act_window">
-        <field name="name">Clients</field>
-        <field name="res_model">cenit.client</field>
-        <field name="view_type">form</field>
-        <field name="view_mode">tree,form</field>
-        <field name="view_id" ref="cenit_client_view_tree"/>
-    </record>
-	
-	<menuitem id="cenit_client_menu" sequence="1" parent="integration" action="cenit_client_action"/>
-
-  </data>
+                        <group string="Local Parameters">
+                            <label for="name"/>
+                            <div name="name">
+                                <div class="oe_inline">
+                                    <field name="name" placeholder="OpenERP Endpoint"/>
+                                </div>
+                            </div>
+							<label for="role"/>
+                            <div name="role">
+                                <div class="oe_inline">
+                                    <field name="role" />
+                                </div>
+                            </div>
+                            <label for="connection_token"/>
+                            <div name="connection_token">
+                                <div class="oe_inline">
+                                    <field name="connection_token" />
+                                </div>
+                            </div>
+                        </group>
+                    </div>
+                </form>
+            </field>
+        </record>
+        
+        <record id="action_cenit_configuration" model="ir.actions.act_window">
+            <field name="name">Configure Cenit</field>            
+            <field name="res_model">cenit.client</field>
+			<field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+			<field name="view_id" ref="view_cenit_client_tree"/>
+        </record>
+        
+        <menuitem id="menu_cenit_config" name="Client" parent="cenit" sequence="1" action="action_cenit_configuration"/>
+        
+    </data>
 </openerp>
