--- a/oe_cenit_client/view/flow.xml
+++ b/oe_cenit_client/view/flow.xml
@@ -34,6 +34,7 @@
 					<group>
 						<field name="purpose"/>
 						<field name="execution"/>
+						<field name="method"/>
 					</group>
 				</sheet>
             </form>
