managing incoming connections with flows

--- a/oe_cenit_client/view/flow.xml
+++ b/oe_cenit_client/view/flow.xml
@@ -35,6 +35,7 @@
 						<field name="purpose"/>
 						<field name="execution"/>
 						<field name="method"/>
+						<field name="format"/>
 					</group>
 				</sheet>
             </form>
