--- a/oe_cenit_client/view/client.xml
+++ b/oe_cenit_client/view/client.xml
@@ -2,7 +2,7 @@
 <openerp>
     <data>
     	
-		<menuitem id="cenit" sequence="5" parent="base.menu_administration" name="Cenit" />
+		<menuitem id="cenit" sequence="5" parent="base.menu_administration" name="Cenit" groups="base.group_system" />
 		
 		<record id="view_cenit_client_tree" model="ir.ui.view" >
 			<field name="name">view.cenit.client.form</field>
