--- a/oe_cenit_client/view/setup.xml
+++ b/oe_cenit_client/view/setup.xml
@@ -126,5 +126,60 @@
             parent="menu_cenit_setup" sequence="1"
             action="action_cenit_connection_role" />
 
+        <record id="view_cenit_flow_tree" model="ir.ui.view">
+            <field name="name">view.cenit.flow.tree</field>
+            <field name="model">cenit.flow</field>
+            <field name="arch" type="xml">
+                <tree string="Flows" >
+                    <field name="name" />
+                    <field name="root" />
+                    <field name="data_type" />
+                    <field name="purpose" />
+                    <field name="execution" />
+                    <!--
+                        <button name="process_all" type="object" string="Process" icon="gtk-go-forward" attrs="{'invisible': [('purpose', '=', 'receive')]}"/>
+                        <button name="set_send_execution" type="object" string="Set Send Execution" icon="terp-stock_effects-object-colorize" attrs="{'invisible': [('purpose', '=', 'receive')]}"/>
+                        <button name="set_receive_execution" type="object" string="Set Reference" icon="terp-stock_effects-object-colorize" attrs="{'invisible': [('purpose', '=', 'send')]}"/>
+                        <button name="clean_reference" type="object" string="Clean Reference" icon="gtk-clear" attrs="{'invisible': [('purpose', '=', 'send')]}"/>
+                    -->
+
+                </tree>
+            </field>
+        </record>
+
+        <record id="view_cenit_flow_form" model="ir.ui.view">
+            <field name="name">view.cenit.flow.form</field>
+            <field name="model">cenit.flow</field>
+            <field name="arch" type="xml">
+                <form string="Flow" version="7.0">
+                    <group>
+                        <group>
+                            <field name="name" />
+                            <field name="root" />
+                            <field name="data_type" />
+                            <field name="purpose" />
+                        </group>
+                        <group>
+                            <field name="execution" />
+                            <field name="method" />
+                            <field name="_format" />
+                        </group>
+                    </group>
+                </form>
+            </field>
+        </record>
+
+        <record id="action_cenit_flow" model="ir.actions.act_window">
+            <field name="name">Flows</field>
+            <field name="res_model">cenit.flow</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+            <field name="view_id" ref="view_cenit_flow_tree"/>
+        </record>
+
+        <menuitem id="menu_cenit_flow" name="Flows"
+            parent="menu_cenit_setup" sequence="2"
+            action="action_cenit_flow" />
+
     </data>
 </openerp>
