Some refactoring and plenty more

--- a/oe_cenit_client/view/config.xml
+++ b/oe_cenit_client/view/config.xml
@@ -21,6 +21,11 @@
                             <field name="cenit_user_token" placeholder="Your cenit's user token" />
                             <field name="odoo_endpoint" placeholder="Set a connection" />
                         </group>
+<!--
+                        <group string="Other settings">
+                            <field name="cenit_translator" />
+                        </group>
+-->
                     </div>
                 </form>
             </field>
