--- a/oe_cenit_client/view/setup.xml
+++ b/oe_cenit_client/view/setup.xml
@@ -36,7 +36,7 @@
                         <page string="Parameters">
                             <field name="url_parameters" widget="one2many_list"
                                    nolabel="1" class="oe_inline oe_no_button"
-                                   context="{'url_id': active_id}">
+                                   context="{'conn_url_id': active_id}">
                                 <tree editable="bottom">
                                     <field name="key" />
                                     <field name="value" />
@@ -46,7 +46,7 @@
                         <page string="Header Parameters">
                             <field name="header_parameters" widget="one2many_list"
                                    nolabel="1" class="oe_inline oe_no_button"
-                                   context="{'header_id': active_id}">
+                                   context="{'conn_header_id': active_id}">
                                 <tree editable="bottom">
                                     <field name="key" />
                                     <field name="value" />
@@ -56,7 +56,7 @@
                         <page string="Template Parameters">
                             <field name="template_parameters" widget="one2many_list"
                                    nolabel="1" class="oe_inline oe_no_button"
-                                   context="{'template_id': active_id}">
+                                   context="{'conn_template_id': active_id}">
                                 <tree editable="bottom">
                                     <field name="key" />
                                     <field name="value" />
@@ -109,6 +109,16 @@
                                 </tree>
                             </field>
                         </page>
+                        <page string="Webhooks">
+                            <field name="webhooks" widget="many2many_list"
+                                   nolabel="1" context="{'role_id': active_id}">
+                                <tree>
+                                    <field name="name" />
+                                    <field name="path" />
+                                    <field name="purpose" />
+                                </tree>
+                            </field>
+                        </page>
                     </notebook>
                 </form>
             </field>
@@ -122,9 +132,86 @@
             <field name="view_mode">tree,form</field>
         </record>
         
-        <menuitem id="menu_cenit_connection_role" name="Roles"
+        <menuitem id="menu_cenit_connection_role" name="Connection Roles"
             parent="menu_cenit_setup" sequence="1"
             action="action_cenit_connection_role" />
+
+
+        <record id="view_cenit_webhook_tree" model="ir.ui.view">
+            <field name="name">view.cenit.webhook.tree</field>
+            <field name="model">cenit.webhook</field>
+            <field name="arch" type="xml">
+                <tree string="Webhooks" >
+                    <field name="name" />
+                    <field name="path" />
+                    <field name="purpose" />
+                </tree>
+            </field>
+        </record>
+
+        <record id="view_cenit_webhook_form" model="ir.ui.view">
+            <field name="name">view.cenit.webhook.form</field>
+            <field name="model">cenit.webhook</field>
+            <field name="arch" type="xml">
+                <form string="Webhook">
+                    <group>
+                        <group>
+                            <field name="name"/>
+                            <field name="path"/>
+                        </group>
+                        <group>
+                            <field name="purpose"/>
+                            <field name="method"/>
+                        </group>
+                    </group>
+                    <notebook>
+                        <page string="Parameters">
+                            <field name="url_parameters" widget="one2many_list"
+                                   nolabel="1" class="oe_inline oe_no_button"
+                                   context="{'hook_url_id': active_id}">
+                                <tree editable="bottom">
+                                    <field name="key" />
+                                    <field name="value" />
+                                </tree>
+                            </field>
+                        </page>
+                        <page string="Header Parameters">
+                            <field name="header_parameters" widget="one2many_list"
+                                   nolabel="1" class="oe_inline oe_no_button"
+                                   context="{'hook_header_id': active_id}">
+                                <tree editable="bottom">
+                                    <field name="key" />
+                                    <field name="value" />
+                                </tree>
+                            </field>
+                        </page>
+                        <page string="Template Parameters">
+                            <field name="template_parameters" widget="one2many_list"
+                                   nolabel="1" class="oe_inline oe_no_button"
+                                   context="{'hook_template_id': active_id}">
+                                <tree editable="bottom">
+                                    <field name="key" />
+                                    <field name="value" />
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
+                </form>
+            </field>
+        </record>
+
+        <record id="action_cenit_webhook" model="ir.actions.act_window">
+            <field name="name">Webhooks</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">cenit.webhook</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
+        <menuitem id="menu_cenit_webhook" name="Webhooks"
+            parent="menu_cenit_setup" sequence="2"
+            action="action_cenit_webhook" />
+
 
         <record id="view_cenit_flow_tree" model="ir.ui.view">
             <field name="name">view.cenit.flow.tree</field>
@@ -132,9 +219,7 @@
             <field name="arch" type="xml">
                 <tree string="Flows" >
                     <field name="name" />
-                    <field name="root" />
                     <field name="data_type" />
-                    <field name="purpose" />
                     <field name="execution" />
                     <!--
                         <button name="process_all" type="object" string="Process" icon="gtk-go-forward" attrs="{'invisible': [('purpose', '=', 'receive')]}"/>
@@ -155,14 +240,14 @@
                     <group>
                         <group>
                             <field name="name" />
-                            <field name="root" />
-                            <field name="data_type" />
-                            <field name="purpose" />
+                            <field name="execution" />
+                            <field name="cenit_translator" />
                         </group>
                         <group>
-                            <field name="execution" />
-                            <field name="method" />
-                            <field name="_format" />
+                            <field name="data_type" />
+                            <field name="scope" />
+                            <field name="connection_role" />
+                            <field name="webhook" />
                         </group>
                     </group>
                 </form>
@@ -178,7 +263,7 @@
         </record>
 
         <menuitem id="menu_cenit_flow" name="Flows"
-            parent="menu_cenit_setup" sequence="2"
+            parent="menu_cenit_setup" sequence="3"
             action="action_cenit_flow" />
 
     </data>
