--- a/oe_cenit_client/view/data_definitions.xml
+++ b/oe_cenit_client/view/data_definitions.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
-        
+
         <menuitem id="menu_cenit_data_definitions" name="Data Definitions"
             parent="menu_cenit_integration" sequence="0" />
-        
+
 <!--
         <record id="view_cenit_schema_tree" model="ir.ui.view">
             <field name="name">view.cenit.schema.tree</field>
@@ -16,7 +16,7 @@
                 </tree>
             </field>
         </record>
-        
+
         <record id="view_cenit_schema_form" model="ir.ui.view">
             <field name="name">view.cenit.schema.form</field>
             <field name="model">cenit.schema</field>
@@ -32,15 +32,15 @@
                 </form>
             </field>
         </record>
-        
+
         <record id="action_cenit_schema" model="ir.actions.act_window">
-            <field name="name">Schemas</field>            
-            <field name="type">ir.actions.act_window</field>            
+            <field name="name">Schemas</field>
+            <field name="type">ir.actions.act_window</field>
             <field name="res_model">cenit.schema</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
         </record>
-        
+
         <menuitem id="menu_cenit_schema" name="Schemas"
             parent="menu_cenit_data_definitions" sequence="0"
             action="action_cenit_schema" />
@@ -77,8 +77,10 @@
                                         <field name="name" string="Odoo" />
                                         <field name="value" string="Cenit" />
                                         <field name="line_type" />
-                                        <field name="reference" />
-                                        <field name="line_cardinality" />
+                                        <field name="reference"
+                                                attrs="{'required':[('line_type', '=', 'model')]}" />
+                                        <field name="line_cardinality"
+                                                attrs="{'required':[('line_type', '=', 'model')]}" />
                                         <field name="primary" />
                                     </tree>
                                 </field>
@@ -114,7 +116,7 @@
                 </tree>
             </field>
         </record>
-        
+
         <record id="view_cenit_library_form" model="ir.ui.view">
             <field name="name">view.cenit.library.form</field>
             <field name="model">cenit.library</field>
@@ -127,15 +129,15 @@
                 </form>
             </field>
         </record>
-        
+
         <record id="action_cenit_library" model="ir.actions.act_window">
-            <field name="name">Libraries</field>            
-            <field name="type">ir.actions.act_window</field>            
+            <field name="name">Libraries</field>
+            <field name="type">ir.actions.act_window</field>
             <field name="res_model">cenit.library</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
         </record>
-        
+
         <menuitem id="menu_cenit_library" name="Libraries"
             parent="menu_cenit_data_definitions" sequence="2"
             action="action_cenit_library" />
