--- a/oe_cenit_client/view/setup.xml
+++ b/oe_cenit_client/view/setup.xml
@@ -217,6 +217,31 @@
             action="action_cenit_webhook" />
 
 
+        <record id="view_cenit_event_tree" model="ir.ui.view">
+            <field name="name">view.cenit.event.tree</field>
+            <field name="model">cenit.event</field>
+            <field name="arch" type="xml">
+                <tree string="Available Events" create="false">
+                    <field name="name" />
+                    <field name="type_" />
+                    <field name="schema" />
+                </tree>
+            </field>
+        </record>
+
+        <record id="action_cenit_event" model="ir.actions.act_window">
+            <field name="name">Events</field>
+            <field name="res_model">cenit.event</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree</field>
+            <field name="view_id" ref="view_cenit_event_tree"/>
+        </record>
+
+        <menuitem id="menu_cenit_event" name="Events"
+            parent="menu_cenit_setup" sequence="3"
+            action="action_cenit_event" />
+
+
         <record id="view_cenit_flow_tree" model="ir.ui.view">
             <field name="name">view.cenit.flow.tree</field>
             <field name="model">cenit.flow</field>
@@ -256,13 +281,15 @@
                         </group>
                         <group>
                             <field name="method" invisible="1" />
-                            <field name="execution"
-                                   attrs="{'required':[('method','!=','get')],'invisible':[('method','=','get')]}"/>
+                            <field name="event"
+                                   attrs="{'required':[('method','!=','get')],'invisible':[('method','=','get')]}"
+                                   options="{'no_quick_create':True,'no_create_edit':True}"/>
                             <field name="cron"
-                                   attrs="{'required':[('execution','=','interval')],'invisible':[('execution','!=','interval')]}" />
+                                   attrs="{'required':[('event','=','interval')],'invisible':[('event','!=','interval')]}" />
                             <field name="format_" />
                             <field name="cenit_translator"
-                                   attrs="{'invisible':[('local','=',True),('webhook','=',False)],'required':[('local','=',False)]}"/>
+                                   attrs="{'invisible':[('local','=',True),('webhook','=',False)],'required':[('local','=',False)]}"
+                                   options="{'no_quick_create':True,'no_create_edit':True}"/>
                             <field name="local" invisible="1" />
                         </group>
                     </group>
@@ -279,8 +306,34 @@
         </record>
 
         <menuitem id="menu_cenit_flow" name="Flows"
-            parent="menu_cenit_setup" sequence="3"
+            parent="menu_cenit_setup" sequence="4"
             action="action_cenit_flow" />
+
+
+        <record id="view_cenit_translator_tree" model="ir.ui.view">
+            <field name="name">view.cenit.translator.tree</field>
+            <field name="model">cenit.translator</field>
+            <field name="arch" type="xml">
+                <tree string="Available Translators" create="false">
+                    <field name="name" />
+                    <field name="type_" />
+                    <field name="mime_type" />
+                    <field name="schema" />
+                </tree>
+            </field>
+        </record>
+
+        <record id="action_cenit_translator" model="ir.actions.act_window">
+            <field name="name">Translators</field>
+            <field name="res_model">cenit.translator</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree</field>
+            <field name="view_id" ref="view_cenit_translator_tree"/>
+        </record>
+
+        <menuitem id="menu_cenit_translator" name="Translators"
+            parent="menu_cenit_setup" sequence="5"
+            action="action_cenit_translator" />
 
     </data>
 </openerp>
